...
        idStack.distribution = .fillProportionally
        idStack.spacing = 20.0
        idStack.alignment = .center
        
        nameEntry.translatesAutoresizingMaskIntoConstraints = false
        nameEntry.widthAnchor.constraint(equalTo: view.widthAnchor, multiplier: 0.6).isActive = true
        nameEntry.placeholder = "Write here."
        
        //adjectiveStack.bottomAnchor.constraint(equalTo: nextButton.topAnchor).isActive = true
        adjectiveStack.leadingAnchor.constraint(equalTo: view.leadingAnchor).isActive = true
        adjectiveStack.trailingAnchor.constraint(equalTo: view.trailingAnchor).isActive = true
        adjectiveStack.alignment = .center
        
...
