...
                                <nil key="highlightedColor"/>
                            </label>
                            <pickerView hidden="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Z74-QX-0vh">
                                <rect key="frame" x="20" y="655" width="374" height="72"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            </pickerView>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ipy-P8-L9I" userLabel="Follow">
                                <rect key="frame" x="0.0" y="797" width="414" height="52"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" systemColor="systemOrangeColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="33"/>
                                <state key="normal" title="Next ">
                                    <color key="titleColor" systemColor="labelColor"/>
...
