...

        let subtitleStyled2 = NSAttributedString(string: ":Answers", attributes: subtitleAttrs)
        descriptiveLabel2.attributedText = subtitleStyled2

        self.addSubview(answerInput)
        answerInput.backgroundColor = .clear
        answerInput.placeholder = "What do you think?"
        answerInput.translatesAutoresizingMaskIntoConstraints = false
        answerInput.centerYAnchor.constraint(equalTo: userAnswerCard.centerYAnchor).isActive = true
        answerInput.heightAnchor.constraint(equalTo: userAnswerCard.heightAnchor, multiplier: 0.5).isActive = true
        answerInput.widthAnchor.constraint(equalToConstant: userAnswerCard.frame.width - userAnswerCard.frame.width*userAnswerCard.dimensionMultiplier).isActive = true
        answerInput.leadingAnchor.constraint(equalTo: userAnswerCard.leadingAnchor, constant: userAnswerCard.frame.width*userAnswerCard.dimensionMultiplier).isActive = true
        answerInput.setLeftPaddingPoints(10)
...
